export interface Observer {
    update(data: any): void;
  }
  